@@ -11,6 +11,7 @@ Release 0.3 - Unreleased
 
   IMPROVEMENTS
 
+    HAMA-386: Removing 'System.arraycopy(...)' call from ByteMessage (edwardyoon)
     HAMA-379: Setting default values to job.setNumBspTask() (Thomas Jungblut via edwardyoon)
     HAMA-376: Refactor BSPMaster and GroomServer (ChiaHung Lin via edwardyoon)
     HAMA-382: Refactor HAMA POM (Tommaso Teofili)
